--- a/basicpage.html
+++ b/basicpage.html
@@ -9,7 +9,7 @@
 <h1> Kyrie Gygi</h1>
 <h2> Located in sunny Arizona! </h2>
 <p> My system Ram: 8 GB</p>
-<p> <img src="images/deeplove.jpg" width ="256" heigth ="144" alt="Deep Love"></p>
+<p> <img src="deeplove.jpg" width ="256" heigth ="144" alt="Deep Love"></p>
 <p>&star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &star;</p>
 </body>
     
